fix: fixed element shift on button hover

--- a/3-column-preview-card-component/styles.css
+++ b/3-column-preview-card-component/styles.css
@@ -143,7 +143,7 @@ body {
 .object__button {
     font-family: var(--ff-base);
     font-weight: var(--fw-bold);
-    border: none;
+    border: 3px solid transparent;
     padding: 0.75rem 1.75rem;
     border-radius: 2rem;
     letter-spacing: 0px;
@@ -153,7 +153,7 @@ body {
 
 .object__button:hover {
     cursor: pointer;
-    border: 3px solid white;
+    border-color: white;
     color: white;
 }
 
